--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
+    "semantic-ui-css": "^2.2.12",
     "semantic-ui-react": "^0.76.0",
     "webpack": "^3.8.1"
   },
