--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "eslint": "^4.11.0",
+    "filestack-js": "^0.9.12",
+    "filestack-react": "^1.3.8",
     "jquery": "^3.2.1",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
