--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "AngelInvest",
+  "name": "Ohana",
   "private": true,
   "dependencies": {
     "babel-core": "^6.26.0",
@@ -10,6 +10,7 @@
     "filestack-js": "^0.9.12",
     "filestack-react": "^1.3.8",
     "jquery": "^3.2.1",
+    "lodash": "^4.17.4",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-redux": "^5.0.6",
