--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "filestack-js": "^0.9.12",
     "filestack-react": "^1.3.8",
     "jquery": "^3.2.1",
+    "jquery-ujs": "^1.2.2",
     "lodash": "^4.17.4",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
