--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "eslint": "^4.11.0",
+    "express": "^4.15.2",
     "fbjs": "^0.8.16",
     "filestack-js": "^0.9.12",
     "filestack-react": "^1.3.8",
@@ -23,6 +24,7 @@
     "redux-thunk": "^2.2.0",
     "semantic-ui-css": "^2.2.12",
     "semantic-ui-react": "^0.76.0",
+    "socket.io": "^2.0.4",
     "webpack": "^3.8.1"
   },
   "description": "This README would normally document whatever steps are necessary to get the application up and running.",
