--- a/package.json
+++ b/package.json
@@ -7,15 +7,17 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "eslint": "^4.11.0",
-    "express": "^4.15.2",
     "fbjs": "^0.8.16",
     "filestack-js": "^0.9.12",
     "filestack-react": "^1.3.8",
     "jquery": "^3.2.1",
     "jquery-ujs": "^1.2.2",
     "lodash": "^4.17.4",
-    "react": "^16.1.1",
-    "react-dom": "^16.1.1",
+    "promise": "^8.0.1",
+    "react": "^16.2.0",
+    "react-chatview": "^0.2.4",
+    "react-dom": "^16.2.0",
+    "react-infinite": "^0.12.1",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
@@ -24,7 +26,6 @@
     "redux-thunk": "^2.2.0",
     "semantic-ui-css": "^2.2.12",
     "semantic-ui-react": "^0.76.0",
-    "socket.io": "^2.0.4",
     "webpack": "^3.8.1"
   },
   "description": "This README would normally document whatever steps are necessary to get the application up and running.",
