--- a/config/cable.yml
+++ b/config/cable.yml
@@ -6,5 +6,5 @@ test:
 
 production:
   adapter: redis
-  url: redis://localhost:6379/1
+  url: redis://redistogo:f8e2afa0ebf593cfef0f47d8235066fa@grouper.redistogo.com:11938/
   channel_prefix: Ohana_production
