--- a/package.json
+++ b/package.json
@@ -2,31 +2,32 @@
   "name": "Ohana",
   "private": true,
   "dependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "eslint": "^4.11.0",
+    "eslint": "^4.19.1",
     "fbjs": "^0.8.16",
     "filestack-js": "^0.9.12",
-    "filestack-react": "^1.3.8",
-    "jquery": "^3.2.1",
+    "filestack-react": "^1.3.9",
+    "jquery": "^3.3.1",
     "jquery-ujs": "^1.2.2",
-    "lodash": "^4.17.4",
+    "lodash": "^4.17.10",
     "promise": "^8.0.1",
-    "react": "^16.0.0",
-    "react-chatview": "^0.2.4",
-    "react-dom": "^16.2.0",
-    "react-redux": "^5.0.6",
+    "react": "^16.3.2",
+    "react-chatview": "^0.2.5",
+    "react-dom": "^16.3.2",
+    "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
-    "semantic-ui-css": "^2.2.12",
+    "semantic-ui-css": "^2.3.1",
     "semantic-ui-react": "^0.76.0",
-    "webpack": "^3.8.1"
+    "webpack": "^3.12.0"
   },
   "devDependencies": {
+    "gulp": "^4.0.0",
     "redux-logger": "^3.0.6"
   },
   "description": "This README would normally document whatever steps are necessary to get the application up and running.",
