--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
     "fbjs": "^0.8.16",
+    "file-loader": "^1.1.11",
     "filestack-js": "^0.9.12",
     "filestack-react": "^1.3.9",
     "jquery": "^3.3.1",
     "jquery-ujs": "^1.2.2",
     "lodash": "^4.17.10",
+    "node-sass": "^4.9.0",
     "promise": "^8.0.1",
     "react": "^16.3.2",
     "react-chatview": "^0.2.5",
@@ -22,9 +25,13 @@
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
+    "resolve-url-loader": "^2.3.0",
+    "sass-loader": "^7.0.1",
     "semantic-ui": "^2.3.1",
     "semantic-ui-css": "^2.3.1",
     "semantic-ui-react": "^0.76.0",
+    "style-loader": "^0.21.0",
+    "url-loader": "^1.0.1",
     "webpack": "^3.12.0"
   },
   "devDependencies": {
