--- a/semantic/src/theme.config
+++ b/semantic/src/theme.config
@@ -42,7 +42,7 @@
 @breadcrumb : 'default';
 @form       : 'default';
 @grid       : 'default';
-@menu       : 'default';
+@menu       : 'github';
 @message    : 'default';
 @table      : 'default';
 
