--- a/semantic/src/theme.config
+++ b/semantic/src/theme.config
@@ -22,7 +22,7 @@
 @reset      : 'default';
 
 /* Elements */
-@button     : 'classic';
+@button     : 'twitter';
 @container  : 'default';
 @divider    : 'default';
 @flag       : 'default';
