--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
     "test": "test"
   },
   "engines": {
-    "node": "4.1.1",
-    "npm": "2.1.x"
+    "node": "8.10.0",
+    "npm": "5.6.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
